Update src/main/java/com/social_network/kata/api/application/service/WallService.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>